# KIWI_Audio_Video_Generator

./: README.md
KIWI-Video/: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_CN.md  check_env.py  docker-compose.yml  pyproject.toml  start_api.sh  test_full_workflow.py  项目汇报_流程介绍.md
KIWI-Video/config/prompts/: film_crew_planning.txt  story_loader.txt  storyboard.txt  veo_prompt.txt
KIWI-Video/docs/: ARCHITECTURE_DIAGRAMS.md  DOCUMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  TECHNICAL_DOCUMENTATION.md
KIWI-Video/kiwi_video/: __init__.py
KIWI-Video/kiwi_video/agents/: __init__.py  film_crew.py  story_loader.py  storyboard.py  voice_actor.py
KIWI-Video/kiwi_video/api/: __init__.py  app.py
KIWI-Video/kiwi_video/api/routes/: health.py  projects.py
KIWI-Video/kiwi_video/core/: __init__.py  base_agent.py  exceptions.py  orchestrator.py  state_manager.py  tool_registry.py
KIWI-Video/kiwi_video/providers/: __init__.py
KIWI-Video/kiwi_video/providers/llm/: __init__.py  base.py  gemini_client.py
KIWI-Video/kiwi_video/providers/video/: __init__.py  base.py  veo_client.py
KIWI-Video/kiwi_video/providers/voice/: __init__.py  base.py  elevenlabs_client.py
KIWI-Video/kiwi_video/schemas/: __init__.py  project.py  responses.py  scene.py
KIWI-Video/kiwi_video/utils/: __init__.py  config.py  file_manager.py  logger.py  prompt_loader.py  video_processor.py
KIWI-Video/scripts/: run_dev.sh  setup.sh
KIWI-Video/tests/: __init__.py
KIWI-Video/tests/integration/: test_workflow.py
KIWI-Video/tests/unit/: test_agents.py
backend/: main.py  (+5 more)
(+31 files in other folders)
